--- a/index.html
+++ b/index.html
@@ -13,12 +13,17 @@
     />
 
     <title>Frontend Mentor | [Challenge Name Here]</title>
+
+    <!-- The fonts we gonna use -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
       rel="stylesheet"
     />
+
+    <link rel="stylesheet" href="/dist/style.css" />
+    <script src="/dist/script.js"></script>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
@@ -32,11 +37,12 @@
     </style>
   </head>
   <body>
-    Social Media Dashboard Total Followers: 23,004 Dark Mode @nathanf 1987
-    Followers 12 Today @nathanf 1044 Followers 99 Today @realnathanf 11k
-    Followers 1099 Today Nathan F. 8239 Subscribers 144 Today Overview - Today
-    Page Views 87 3% Likes 52 2% Likes 5462 2257% Profile Views 52k 1375%
-    Retweets 117 303% Likes 507 553% Likes 107 19% Total Views 1407 12%
+    <h1>Social Media Dashboard</h1>
+    Total Followers: 23,004 Dark Mode @nathanf 1987 Followers 12 Today @nathanf
+    1044 Followers 99 Today @realnathanf 11k Followers 1099 Today Nathan F. 8239
+    Subscribers 144 Today Overview - Today Page Views 87 3% Likes 52 2% Likes
+    5462 2257% Profile Views 52k 1375% Retweets 117 303% Likes 507 553% Likes
+    107 19% Total Views 1407 12%
 
     <div class="attribution">
       Challenge by
