--- a/index.html
+++ b/index.html
@@ -38,8 +38,27 @@
   </head>
   <body>
     <header class="header container">
-      <h1>Social Media Dashboard</h1>
-      Total Followers: 23,004 Dark Mode
+      <div class="header__title">
+        <h1>Social Media Dashboard</h1>
+        Total Followers: 23,004
+      </div>
+
+      <fieldset
+        class="header__toggle toggle"
+        aria-label="theme toggle"
+        role="radiogroup"
+      >
+        <label for="dark">Dark</label>
+        <div class="toggle__wrapper">
+          <input type="radio" name="theme" id="dark" />
+          <input type="radio" name="theme" id="system" />
+          <input type="radio" name="theme" id="light" checked />
+          <span aria-hidden="true" class="c-toggle__background"></span>
+          <span aria-hidden="true" class="c-toggle__switcher"></span>
+        </div>
+        <label for="dark">System Pref</label>
+        <label for="light">Light</label>
+      </fieldset>
     </header>
 
     <main>
